polish and design tweaks

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Gym.Gym
+GameDefaultMap=/Game/Maps/Gym_Fab.Gym_Fab
 EditorStartupMap=/Game/Maps/Gym.Gym
 GlobalDefaultGameMode=/Game/System/B_JMGameMode.B_JMGameMode_C
 
