--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -95,5 +95,6 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
++MapsToCook=(FilePath="/Game/Maps/StartMenu")
 +MapsToCook=(FilePath="/Game/Maps/Gym_Fab")
 
